--- a/analytics.html
+++ b/analytics.html
@@ -303,7 +303,7 @@
 
   
   <footer>
-    <p>Built with Data Science and Style | © 2025 JobPredictAI</p>
+    <p>2025 JobPredictAI | Data4rce - SLIIT Y3S1</p>
   </footer>
 
   <script>
