--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 JobPredictAI | All Rights Reserved</p>
+    <p>2025 JobPredictAI | Data4rce - SLIIT Y3S1</p>
   </footer>
 
 </body>
