--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #533440 0%, #9DB6CC 100%);
+      background: linear-gradient(135deg, #062F4F 0%, #2E8BC0 50%, #B1D4E0 100%);
       overflow-x: hidden;
       color: #f0e9e1;
     }
 
     .navbar {
-      background: rgba(83, 52, 64, 0.85);
+      background: rgba(6, 47, 79, 0.9);
       backdrop-filter: saturate(180%) blur(10px);
       box-shadow: 0 4px 15px rgba(0,0,0,0.3);
       display: flex;
@@ -34,8 +34,8 @@
       font-weight: 700;
       font-size: 1.8rem;
       letter-spacing: 2px;
-      color: #E4D4C8;
-      text-shadow: 0 0 8px #A47786;
+      color: #B1D4E0;
+      text-shadow: 0 0 8px #2E8BC0;
       cursor: default;
     }
 
@@ -48,7 +48,7 @@
     }
 
     .nav-links a {
-      color: #E4D4C8;
+      color: #B1D4E0;
       text-decoration: none;
       font-weight: 500;
       font-size: 1rem;
@@ -63,14 +63,14 @@
       height: 2px;
       bottom: -4px;
       left: 0;
-      background: #A47786;
+      background: #2E8BC0;
       transition: width 0.3s ease;
       border-radius: 2px;
     }
 
     .nav-links a:hover {
-      color: #fff;
-      text-shadow: 0 0 10px #A47786, 0 0 20px #A47786;
+      color: #B1D4E0;
+      text-shadow: 0 0 10px #B1D4E0, 0 0 20px #2E8BC0;
     }
 
     .nav-links a:hover::after {
@@ -92,7 +92,7 @@
       content: "";
       position: absolute;
       top: 0; left: 0; right: 0; bottom: 0;
-      background: linear-gradient(135deg, rgba(83,52,64,0.7), rgba(157,182,204,0.7));
+      background: linear-gradient(135deg, rgba(6,47,79,0.7), rgba(177,212,224,0.7));
       z-index: 0;
       pointer-events: none;
     }
@@ -148,25 +148,25 @@
       font-size: 1.2rem;
       font-weight: 600;
       color: #f0e9e1;
-      background: rgba(164, 119, 134, 0.3);
-      border: 2px solid #A47786;
+      background: rgba(46, 139, 192, 0.3);
+      border: 2px solid #2E8BC0;
       border-radius: 12px;
       backdrop-filter: blur(10px);
-      box-shadow: 0 0 15px #A47786aa;
+      box-shadow: 0 0 15px #2E8BC0aa;
       cursor: pointer;
       text-decoration: none;
       transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease, color 0.3s ease;
       display: inline-block;
       user-select: none;
-      filter: drop-shadow(0 0 8px #A47786);
+      filter: drop-shadow(0 0 8px #2E8BC0);
     }
 
     .cta-btn:hover {
-      background-color: #A47786;
+      background-color: #2E8BC0;
       color: #f0e9e1;
       transform: scale(1.05);
-      box-shadow: 0 0 25px #f0e9e1, 0 0 40px #A47786;
-      filter: drop-shadow(0 0 15px #f0e9e1);
+      box-shadow: 0 0 25px #B1D4E0, 0 0 40px #2E8BC0;
+      filter: drop-shadow(0 0 15px #B1D4E0);
     }
 
     iframe#appFrame {
@@ -174,14 +174,14 @@
       height: 90vh;
       border: none;
       display: none;
-      box-shadow: 0 0 30px rgba(83, 52, 64, 0.6);
+      box-shadow: 0 0 30px rgba(6, 47, 79, 0.6);
       border-radius: 8px;
     }
 
     footer {
-      background: rgba(83, 52, 64, 0.85);
+      background: rgba(6, 47, 79, 0.9);
       backdrop-filter: saturate(180%) blur(10px);
-      color: #E4D4C8;
+      color: #B1D4E0;
       text-align: center;
       padding: 1rem 0;
       font-weight: 500;
