added dtreamlit link for prediction

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
       <div class="logo">JobPredictAI</div>
       <ul class="nav-links">
         <li><a href="index.html">Dashboard</a></li>
-        <li><a href="app.py">Input</a></li>
+        <li><a href="https://jobchangeshr.streamlit.app/">Input</a></li>
         <li><a href="analytics.html">Analytics</a></li>
         <li><a href="#">Reports</a></li>
         <li><a href="#">Settings</a></li>
@@ -250,7 +250,7 @@
         An AI-powered HR analytics system that predicts job changes and helps organizations
         understand workforce dynamics.
       </p>
-      <a href="app.py" class="cta-btn">🚀 Try Prediction</a>
+      <a href="https://jobchangeshr.streamlit.app/" class="cta-btn">🚀 Try Prediction</a>
     </div>
   </section>
 
