added link to analytics

--- a/analytics.html
+++ b/analytics.html
@@ -277,7 +277,7 @@
       <div class="logo">JobPredictAI</div>
       <ul class="nav-links">
         <li><a href="index.html">Dashboard</a></li>
-        <li><a href="app.py">Input</a></li>
+        <li><a href="https://jobchangeshr.streamlit.app/">Input</a></li>
         <li><a href="analytics.html">Analytics</a></li>
         <li><a href="#">Reports</a></li>
         <li><a href="#">Settings</a></li>
