--- a/index.html
+++ b/index.html
@@ -211,20 +211,18 @@
     }
   </style>
   <script>
-  document.addEventListener("DOMContentLoaded", function() {
-    const iframe = document.getElementById("appFrame");
-    const hero = document.querySelector(".hero");
-    const inputLink = document.querySelector('a[href="https://jobchangeshr.streamlit.app/"]');
-
-    inputLink.addEventListener("click", function(event) {
-      event.preventDefault();
-      hero.style.display = "none";         // hide hero section
-      iframe.src = "https://jobchangeshr.streamlit.app/"; // load Streamlit app
-      iframe.style.display = "block";      // show iframe
-      window.scrollTo(0, 0);               // scroll to top
+    document.addEventListener("DOMContentLoaded", function() {
+      function showIframe(event) {
+        event.preventDefault();
+        document.querySelector('.hero').style.display = 'none';
+        document.getElementById('appFrame').style.display = 'block';
+      }
+      var inputLinks = document.querySelectorAll('a[href="app.py"]');
+      inputLinks.forEach(function(link) {
+        link.addEventListener('click', showIframe);
+      });
     });
-  });
-</script>
+  </script>
 </head>
 <body>
 
@@ -256,7 +254,7 @@
     </div>
   </section>
 
-  <iframe id="appFrame" src="" style="display:none; width:100%; height:90vh; border:none; border-radius:8px;"></iframe>
+  <iframe id="appFrame" src="http://localhost:8501" style="display:none; width:100%; height:90vh; border:none;"></iframe>
 
   <!-- Footer -->
   <footer>
