--- a/analytics.html
+++ b/analytics.html
@@ -274,7 +274,7 @@
 <body>
   <header>
     <nav class="navbar">
-      <div class="logo">JobPredictAI</div>
+      <div class="logo">JobPredict</div>
       <ul class="nav-links">
         <li><a href="index.html">Dashboard</a></li>
         <li><a href="https://jobchangeshr.streamlit.app/">Input</a></li>
@@ -320,7 +320,7 @@
 
   
   <footer>
-    <p>2025 JobPredictAI | Data4rce - SLIIT Y3S1</p>
+    <p>2025 JobPredict | Data4rce - SLIIT Y3S1</p>
   </footer>
 
   <script>
