--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AI Job Change Prediction</title>
+  <title>Job Change Prediction</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <style>
@@ -229,7 +229,7 @@
   <!-- Navigation Bar -->
   <header>
     <nav class="navbar">
-      <div class="logo">JobPredictAI</div>
+      <div class="logo">JobPredict</div>
       <ul class="nav-links">
         <li><a href="index.html">Dashboard</a></li>
         <li><a href="https://jobchangeshr.streamlit.app/">Input</a></li>
@@ -244,11 +244,11 @@
   <section class="hero">
     <lottie-player src="animations/job2.json" background="transparent" speed="1" style="position:absolute; width:100%; height:100%; z-index:-1;" loop autoplay></lottie-player>
     <div style="position: relative;" class="hero-content">
-      <h1>AI Based Job Change Prediction</h1>
-      <p class="tagline">Empowering Smarter HR Decisions with AI</p>
+      <h1>Job Change Prediction</h1>
+      <p class="tagline">Empowering Smarter HR Decisions </p>
       <p>
-        An AI-powered HR analytics system that predicts job changes and helps organizations
-        understand workforce dynamics.
+        HR analytics system that predicts job changes and helps organizations
+        understand workforce dynamics For Data Scientists.
       </p>
       <a href="https://jobchangeshr.streamlit.app/" class="cta-btn">🚀 Try Prediction</a>
     </div>
@@ -258,7 +258,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>2025 JobPredictAI | Data4rce - SLIIT Y3S1</p>
+    <p>2025 JobPredict | Data4rce - SLIIT Y3S1</p>
   </footer>
 
 </body>
